--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "displayName": "VirtualMetal",
   "description": "VirtualMetal Development Tools",
   "publisher": "VirtualMetal",
+  "icon": "VirtualMetal-glow-128px.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/VirtualMetal/vscode-vmtools.git"
   },
-  "version": "0.1.0",
+  "version": "0.2.0",
   "engines": {
     "vscode": "^1.67.0"
   },
