--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/VirtualMetal/vscode-vmtools.git"
   },
-  "version": "0.4.0",
+  "version": "0.5.0",
   "engines": {
     "vscode": "^1.67.0"
   },
@@ -407,8 +407,7 @@
               "miDebuggerServerAddress": "localhost:30317",
               "setupCommands": [
                 { "text": "-enable-pretty-printing" },
-                { "text": "-gdb-set disassembly-flavor intel" },
-                { "text": "-break-insert main" }
+                { "text": "-gdb-set disassembly-flavor intel" }
               ]
             }
           }
